--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "bot-website",
   "version": "1.0.0",
   "description": "Website para um bot com termos de serviço e políticas de privacidade.",
-  "main": "src/index.html",
+  "main": "index.html",
   "scripts": {
     "start": "live-server src",
     "build": "echo 'Build script placeholder'"
   },
-  "author": "Seu Nome",
+  "author": "JoooVi",
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
